crates/swc_ecma_parser/tests/test262-error-references/fail/e2cdddda85e8ffe1.js.stderr
error: Unterminated block comment
 --> $DIR/tests/test262-parser/fail/e2cdddda85e8ffe1.js:1:1
  |
1 | /*hello  *
  | ^^^^^^^^^^

